feat: добавил работу с почтой
